Implement scroll to top on load
Add a script to scroll to the top on page load.

--- a/index.html
+++ b/index.html
@@ -527,6 +527,7 @@
   <!-- Hero -->
   <section class="hero" data-aos="fade">
     <div class="container hero-content">
+      <img src="3_efcb2dc3-a2ef-4f6b-9e99-134326d31ccb.png" alt="Logo" style="width: 100px; height: 100px; border-radius: 50%;">
       <h1>Luxury <span class="highlight-red">Beauty</span> Lounge</h1>
       <p>Exklusive Behandlungen • Professionelle Ausbildung • Dein Weg in die Selbstständigkeit als Beauty-Expertin</p>
       
@@ -617,6 +618,11 @@
       once: true,
       easing: 'ease-out',
       disable: window.matchMedia('(prefers-reduced-motion: reduce)').matches
+    });
+  </script>
+  <script>
+    window.addEventListener('load', () => {
+      window.scrollTo(0, 0);
     });
   </script>
 </body>
