Implement smooth scrolling for anchor links
Add smooth scrolling for anchor links in the document.

--- a/index.html
+++ b/index.html
@@ -679,5 +679,16 @@
     // Trigger initial check for above-fold elements
     setTimeout(animateOnScroll, 100);
   </script>
+  <script>
+document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+  anchor.addEventListener('click', function (e) {
+    e.preventDefault();
+    document.querySelector(this.getAttribute('href')).scrollIntoView({
+      behavior: 'smooth',
+      block: 'start'
+    });
+  });
+});
+</script>
 </body>
 </html>
