Add scroll restoration script to index.html

--- a/index.html
+++ b/index.html
@@ -553,5 +553,10 @@
       });
     });
   </script>
+  <script>
+  if ('scrollRestoration' in history) {
+    history.scrollRestoration = 'manual';
+  }
+</script>
 </body>
 </html>
