--- a/index.html
+++ b/index.html
@@ -543,9 +543,9 @@
     </div>
   </section>
 
-  <footer data-aos="fade-up">
-    © 2026 Luxury Beauty Lounge – Alle Rechte vorbehalten
-  </footer>
+<footer data-aos="fade">
+  © 2026 Luxury Beauty Lounge – Alle Rechte vorbehalten
+</footer>
 
   <!-- Smooth scroll for internal links -->
   <script>
