Fix footer styles and ensure proper HTML closure

--- a/index.html
+++ b/index.html
@@ -446,6 +446,10 @@
     transform: none !important;
   }
 }
+footer {
+  opacity: 1 !important;
+  transform: none !important;
+}
   </style>
 </head>
 <body>
