Enhance scrolling behavior on page load
Removed manual scroll restoration and added smooth scrolling for internal links.

--- a/index.html
+++ b/index.html
@@ -576,9 +576,29 @@ footer {
     });
   </script>
   <script>
-  if ('scrollRestoration' in history) {
-    history.scrollRestoration = 'manual';
-  }
+  window.addEventListener('load', () => {
+    // Ensure page starts at top
+    window.scrollTo(0, 0);
+
+    // Initialize AOS after scroll
+    AOS.init({
+      duration: 600,
+      once: true,
+      offset: 100,
+      easing: 'ease-out-cubic'
+    });
+  });
+
+  // Optional: keep smooth scroll for internal links
+  document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+    anchor.addEventListener('click', function (e) {
+      e.preventDefault();
+      document.querySelector(this.getAttribute('href')).scrollIntoView({
+        behavior: 'smooth',
+        block: 'start'
+      });
+    });
+  });
 </script>
 </body>
 </html>
