Update logo image source in index.html

--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ footer {
   <!-- Hero -->
 <section class="hero" data-aos="fade">
   <div class="container hero-content">
-    <img src="3_efcb2dc3-a2ef-4f6b-9e99-134326d31ccb.png" 
+    <img src="Logo.svg" 
          alt="Logo" 
          style="width: 100px; height: 100px; border-radius: 50%;" 
          data-aos="fade-up" 
