Add hero logo styling and update image element

--- a/index.html
+++ b/index.html
@@ -468,6 +468,15 @@ footer {
 .hero .cta-btn {
   animation: float 2s ease-in-out infinite;
 }
+.hero-logo {
+  position: absolute;
+  top: var(--spacing-md);
+  left: 0px; /* closer to the left edge */
+  width: 200px;
+  height: auto;
+  border-radius: 50%;
+  z-index: 10;
+}
   </style>
 </head>
 <body>
@@ -478,11 +487,11 @@ footer {
   <!-- Hero -->
 <section class="hero" data-aos="fade">
   <div class="container hero-content">
-    <img src="Logo.svg" 
-         alt="Logo" 
-         style="width: 100px; height: 100px; border-radius: 50%;" 
-         data-aos="fade-up" 
-         data-aos-delay="100">
+ <img src="Logo.svg" 
+     alt="Logo" 
+     class="hero-logo"
+     data-aos="fade-down"
+     data-aos-delay="100">
 
     <h1 data-aos="fade-up" data-aos-delay="300">
       Luxury <span class="highlight-red">Beauty</span> Lounge
