Update links to Calendly for booking services

--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@ footer span {
         <h3>Luxury Glow Facial</h3>
         <p>Hydrafacial + LED-Therapie + Massage – für strahlende Haut und pure Entspannung.</p>
         <p><strong>Dauer:</strong> 90 Min. | <strong>ab</strong> 145 €</p>
-        <a href="#" class="cta-btn">Termin sichern</a>
+<a href="https://calendly.com/" class="cta-btn" target="_blank">Termin sichern</a>
       </div>
 
       <!-- Other services -->
@@ -815,14 +815,14 @@ footer span {
         <h3>Russian Volume Lashes</h3>
         <p>Ultra-leichte, dramatische Wimpernverlängerung – perfekt für den Wow-Effekt.</p>
         <p><strong>Dauer:</strong> 2–2.5 Std. | <strong>ab</strong> 98 €</p>
-        <a href="#" class="cta-btn">Termin sichern</a>
+<a href="https://calendly.com/" class="cta-btn" target="_blank">Termin sichern</a>
       </div>
 
       <div class="service-card" data-aos="fade-up" data-aos-delay="500">
         <h3>Deluxe Brow Shaping</h3>
         <p>Perfekte Augenbrauen mit präzisem Waxing, Pinzette und Styling – für einen eleganten Look.</p>
         <p><strong>Dauer:</strong> 60 Min. | <strong>ab</strong> 75 €</p>
-        <a href="#" class="cta-btn">Termin sichern</a>
+<a href="https://calendly.com/" class="cta-btn" target="_blank">Termin sichern</a>
       </div>
     </div>
 
@@ -871,7 +871,7 @@ footer span {
           ✓ Deutlich höheres Einkommen<br>
           ✓ Freiheit & Erfüllung
         </p>
-        <a href="#" class="cta-btn">Kurs jetzt buchen</a>
+<a href="https://calendly.com/" class="cta-btn" target="_blank">Kurs jetzt buchen</a>
       </div>
     </div>
     <!-- Micro social proof -->
