--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Luxury Beauty Lounge – Premium Sessions & Ausbildung</title>
+<title>ONLYBEAUTYLEIPZIG</title>
   <script>
   if ('scrollRestoration' in history) {
     history.scrollRestoration = 'manual';
@@ -748,9 +748,6 @@ footer span {
   box-shadow: 0 8px 32px rgba(0,0,0,0.3);
   background: var(--gold);
 }
-.btn-group .cta-btn:nth-child(2) {
-  animation-delay: 0.4s; /* smaller offset for more natural float */
-}
   </style>
 </head>
 <body>
@@ -767,28 +764,28 @@ footer span {
      data-aos="fade-down"
      data-aos-delay="100">
 
-    <h1 data-aos="fade-up" data-aos-delay="300">
-      Luxury <span class="highlight-red">Beauty</span> Lounge
-    </h1>
+<h1 data-aos="fade-up" data-aos-delay="300">
+  DERMA <span class="highlight-red">INSTITUT</span> & ELITE ACADEMY
+</h1>
 
-    <p data-aos="fade-up" data-aos-delay="500">
-      Exklusive Behandlungen • Professionelle Ausbildung • Dein Weg in die Selbstständigkeit als Beauty-Expertin
-    </p>
+<p data-aos="fade-up" data-aos-delay="500">
+  Das 1. Hautkonzept in ganz Sachsen • Ursache statt Oberfläche • Dein Weg in die Selbstständigkeit als Hautexpertin
+</p>
     
     <!-- Social Proof Ticker -->
 <div class="social-proof-ticker" data-aos="fade-up" data-aos-delay="600">
-  <div class="ticker-track">
-    <span>“Die Behandlung war einfach traumhaft! – Anna K.”</span>
-    <span>“Professionell, freundlich und sehr sauber. – Lara M.”</span>
-    <span>“Meine Wimpern sehen fantastisch aus! – Julia S.”</span>
-    <span>“Ich komme definitiv wieder. – Sophie R.”</span>
-    <span>“Tolles Erlebnis, kann ich nur empfehlen. – Maria L.”</span>
-  </div>
+<div class="ticker-track">
+<span>“Endlich wurde meine Haut verstanden! – Anna K.”</span>
+<span>“Professionelle Hautbehandlung, sehr empfehlenswert. – Lara M.”</span>
+<span>“Meine Haut fühlt sich strahlend und gesund an. – Julia S.”</span>
+<span>“Ich komme definitiv wieder für weitere Behandlungen. – Sophie R.”</span>
+<span>“Tolles Hauterlebnis, kann ich nur empfehlen. – Maria L.”</span>
+</div>
 </div>
 
 <div class="btn-group" data-aos="fade-up" data-aos-delay="700">
-  <a href="#sessions" class="cta-btn no-press">Behandlung buchen</a>
-  <a href="#course-choice" class="cta-btn no-press">Kurs buchen</a>
+  <a href="#sessions" class="cta-btn no-press">Kosmetische Behandlung buchen</a>
+  <a href="#course-choice" class="cta-btn no-press">Schulung buchen</a>
 </div>
   </div>
 </section>
@@ -800,31 +797,31 @@ footer span {
       Unsere Signature <span class="highlight-red">Behandlungen</span>
     </h2>
 
-    <div class="services-grid">
-      <!-- Featured service -->
-      <div class="service-card service-featured" data-aos="fade-up" data-aos-delay="200">
-        <div class="featured-badge">Beliebt</div>
-        <h3>Luxury Glow Facial</h3>
-        <p>Hydrafacial + LED-Therapie + Massage – für strahlende Haut und pure Entspannung.</p>
-        <p><strong>Dauer:</strong> 90 Min. | <strong>ab</strong> 145 €</p>
-<a href="https://calendly.com/" class="cta-btn" target="_blank">Termin sichern</a>
-      </div>
+<div class="services-grid">
+  <!-- Featured service -->
+  <div class="service-card service-featured" data-aos="fade-up" data-aos-delay="200">
+    <div class="featured-badge">Beliebt</div>
+    <h3>Luxury Glow Facial</h3>
+    <p>Hydrafacial + LED-Therapie + Massage – für strahlende Haut und pure Entspannung.</p>
+    <p><strong>Dauer:</strong> 90 Min. | <strong>ab</strong> 145 €</p>
+    <a href="#" class="cta-btn">Termin sichern</a>
+  </div>
 
-      <!-- Other services -->
-      <div class="service-card" data-aos="fade-up" data-aos-delay="350">
-        <h3>Russian Volume Lashes</h3>
-        <p>Ultra-leichte, dramatische Wimpernverlängerung – perfekt für den Wow-Effekt.</p>
-        <p><strong>Dauer:</strong> 2–2.5 Std. | <strong>ab</strong> 98 €</p>
-<a href="https://calendly.com/" class="cta-btn" target="_blank">Termin sichern</a>
-      </div>
+  <!-- Other skin treatments -->
+  <div class="service-card" data-aos="fade-up" data-aos-delay="350">
+    <h3>Klassische Kosmetik</h3>
+    <p>Grundpflege, Hautschutz und Entspannung zur Verbesserung des Hautbildes. Reduktion von Unreinheiten und Förderung eines ebenmäßigen Teints.</p>
+    <p><strong>Dauer:</strong> 60 Min. | <strong>ab</strong> 75 €</p>
+    <a href="#" class="cta-btn">Termin sichern</a>
+  </div>
 
-      <div class="service-card" data-aos="fade-up" data-aos-delay="500">
-        <h3>Deluxe Brow Shaping</h3>
-        <p>Perfekte Augenbrauen mit präzisem Waxing, Pinzette und Styling – für einen eleganten Look.</p>
-        <p><strong>Dauer:</strong> 60 Min. | <strong>ab</strong> 75 €</p>
-<a href="https://calendly.com/" class="cta-btn" target="_blank">Termin sichern</a>
-      </div>
-    </div>
+  <div class="service-card" data-aos="fade-up" data-aos-delay="500">
+    <h3>Microneedling</h3>
+    <p>Minimal-invasive Behandlung zur Verbesserung der Hautstruktur, für Falten, Akne-Narben, Hyperpigmentierung und vergrößerte Poren.</p>
+    <p><strong>Dauer:</strong> 75 Min. | <strong>ab</strong> 120 €</p>
+    <a href="#" class="cta-btn">Termin sichern</a>
+  </div>
+</div>
 
     <!-- Micro trust signals -->
     <p class="services-trust">
@@ -864,19 +861,19 @@ footer span {
 
    <div class="choice-card choice-good choice-featured" data-aos="fade-up" data-aos-delay="400">
         <h3>Option B: Starte jetzt deinen Weg</h3>
-        <p>Werde Lash- & Beauty-Profi, baue dein eigenes Business auf und lebe deine Leidenschaft selbstbestimmt.</p>
+<p>Werde Skin-Expertin, baue dein eigenes Business auf und lebe deine Leidenschaft selbstbestimmt.</p>
         <p class="choice-good-list">
-          ✓ Lerne Premium-Techniken<br>
-          ✓ Werde deine eigene Chefin<br>
-          ✓ Deutlich höheres Einkommen<br>
-          ✓ Freiheit & Erfüllung
-        </p>
-<a href="https://calendly.com/" class="cta-btn" target="_blank">Kurs jetzt buchen</a>
+  ✓ Werde zum Hautexperten<br>
+  ✓ Werde deine eigene Chefin<br>
+  ✓ Deutlich höheres Einkommen<br>
+  ✓ Freiheit & Erfüllung
+</p>
+        <a href="#" class="cta-btn">Ja, ich will erfolgreicher Skin Expert werden</a>
       </div>
     </div>
     <!-- Micro social proof -->
 <div class="course-trust" data-aos="fade-up" data-aos-delay="500">
-  <p><strong>90%</strong> unserer Absolventinnen starten erfolgreich ihr eigenes Business innerhalb von 6 Monaten</p>
+<p><strong>90%</strong> unserer Absolventinnen starten erfolgreich ihr eigenes Business direkt nach der Schulung</p>
   <p>"Dank des Kurses habe ich mein Studio eröffnet!" – Lena M.</p>
   <p>"Die Techniken sind wirklich professionell und leicht umsetzbar." – Sarah K.</p>
 </div>
